# qfire

./: .gitignore  Cargo.toml  Makefile  README.md  qfire.toml
bench-out/: baselines_e10_healthbench.json  baselines_e10_injection.json  baselines_e3_healthbench.json  baselines_e3_injection.json  nemo_eval.json  nemo_healthbench.json
chains/: code_assist.yaml  default.yaml  e7_agent.yaml  e7_banking.yaml  e7_injecagent.yaml  e7_slack.yaml  e7_travel.yaml  e7_workspace.yaml  hipaa_phi.yaml  injection_ordered.yaml  marketing.yaml  support.yaml
nemo_config/: SETUP.md  config.yml  prompts.yml  selfcheck_prompt.txt
paper/: PAPER-peer-review.json  PAPER-peer-review.md  PAPER.md  PEER-REVIEW-TRACKING.md  main.tex  numbers.tex  refs.bib
rules/: scope_agent_on_task.yaml
scripts/: adapt_vs_qfire.py  analyze_adaptive.py  analyze_cross_model.py  analyze_judge_ablation.py  analyze_judge_frontier.py  analyze_paired.py  analyze_policy_length.py  analyze_throughput.py  analyze_transfer.py  baselines.py  build_judge_frontier_corpora.sh  build_paper.py  decontaminate.py  fetch-corpora.sh  fetch-deberta.sh  fetch_corpora.py  fig_deobf_ladder.py  fig_frontier.py  fig_hero.py  fig_judge_and_ensemble.py  fig_roc_pr.py  figstyle.py  gen_adaptive_attacks.py  gen_cascade_attacks.py  gen_external_benign.py  gen_healthcare_dataset.py  gen_indomain_benign.py  gen_multiturn.py  gen_scaling_chains.py  healthbench_percat.py  healthbench_run.sh  item_c_analyze.py  item_c_forms.py  item_c_gold.py  item_c_sample.py  item_c_score.py  judge_memory_frontier.sh  judge_model_ablation.sh  make_attack_subset.py  make_encoded_sets.py  (+53 more)
src/: app.rs  audit.rs  chain.rs  config.rs  engine.rs  error.rs  ir.rs  lib.rs  main.rs  normalize.rs  output.rs  phi.rs  rule.rs  ruleset.rs  verdict.rs
tests/: integration.rs
tutorials/: 01-getting-started.md  02-proxy-in-front-of-your-app.md  README.md  (+4 more)
(+235 files in other folders)
